oauth configured, trying to get ENV kinks worked out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= link_to "Sign In with Google", user_omniauth_authorize_path(:google_oauth2)%>
     <%= yield %>
   </body>
 </html>
