logout functionality implemented

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <%= link_to "Sign In with Google", user_omniauth_authorize_path(:google_oauth2)%>
+    <% if user_signed_in? %>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete ) %>
+    <% else %>
+      <%= link_to "Sign In with Google", user_omniauth_authorize_path(:google_oauth2)%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
