Adds some files to handle Google Calendar API

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <% if @user %>
-	Its Logged in <%= @user.username %>
+	Its Logged in <%= current_user.username %>
+	
 <%else %>
 	NOT logged in
+
 <%end %>
