adds user preferance page - weather input not working completely yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= flash.notice %> 
     <% if user_signed_in? %>
       <%= link_to('Logout', destroy_user_session_path, :method => :delete ) %>
     <% else %>
@@ -16,5 +17,5 @@
     <% end %>
     <%= yield %>
   </body>
-  
+
 </html>
