--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,58 @@
 <%else %>
 	NOT logged in
 <%end %>
+
+
+   <div class="container">
+     <div class="row">
+       <h2 class="col s12">Set Your Alarm</h2>
+       <form class="col s12" action="/users/<%=current_user.id%>" method="POST">
+				 <input type="hidden" name="_method" value="PUT">
+				 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+         <div class="row">
+           <div class="input-field col s12">
+             <label for="input_date">Date</label>
+             <input id="input_date" class="datepicker" type="date" name="date">
+           </div>
+         </div>
+
+				 <div class="row">
+           <div class="input-field col s12">
+             <label for="input_endtime">Time</label><br />
+             <input id="input_endtime" class="timepicker" type="time" name="user[time]">
+           </div>
+         </div>
+				 <br />
+
+				 <div class="row">
+					 <div class="col s12 m6">
+						 <div class="card blue-grey darken-1">
+							 <div class="card-content white-text">
+								 <span class="card-title">Weather</span>
+								 <p>
+									 Blah blah weather blahhhhhhhhh
+								 </p>
+
+							 </div>
+							 <div class="card-action">
+								 <div class="switch" unchecked><label>Off<input name="user[weather]" type="checkbox" checked><span class="lever"></span>On</label></div>
+								 <br>
+								 <div class="switch">
+									 <label>
+										 Off
+										 <input type="checkbox" id="mycheckbox" name="user[weather]">
+										 <span class="lever"></span>
+										 On
+									 </label>
+								 </div>
+							 </div>
+						 </div>
+					 </div>
+				 </div>
+
+				 <input class="waves-effect waves-light btn-large" type="submit" onclick="value_()">
+
+       </form>
+     </div>
+   </div>
