Adds background image for index widgets

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,2 +1,8 @@
-<p id="weather"></p>
-<img id="weather-icon" src=""></img>
+<head>
+  <link rel="stylesheet" type="text/css" href="widgets.css">
+</head>
+<body id="stuff">
+  <p id="weather"></p>
+
+  <img id="weather-icon" src=""></img>
+</body>
