Added style to widgets index

--- a/app/assets/stylesheets/widgets.css
+++ b/app/assets/stylesheets/widgets.css
@@ -3,9 +3,28 @@
 	background-image: url('/assets/morning.jpg');
 	background-repeat:no-repeat;
 	background-size:cover;
-
+	background-attachment: fixed;
+	background-position:center center;
 }
 
 #weather{
 	color: red;
 }
+
+#weather-widget {
+	border-radius: 25px;
+	padding: 20px;
+	display: none;
+	vertical-align: middle;
+	background: darkgray;
+	width: 60vw;
+	height: 40vw;
+	margin: 0 auto;
+	left: 0%;
+	position:relative;
+	top: 125px;
+}
+
+/*.weather-widget {
+	background: black;
+}*/
