--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -2,7 +2,11 @@
   <link rel="stylesheet" type="text/css" href="widgets.css">
 </head>
 <body id="stuff">
-  <p id="weather"></p>
+	<div id="widget-container">
+		<div id="weather-widget" class= "hidden grey darken-3">
+		  <p id="weather"></p>
 
-  <img id="weather-icon" src=""></img>
+		  <img id="weather-icon" src=""></img>
+		</div>
+	</div>
 </body>
