Adds more style to the widgets page

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -3,10 +3,11 @@
 </head>
 <body id="stuff">
 	<div id="widget-container">
-		<div id="weather-widget" class= "hidden grey darken-3">
-		  <p id="weather"></p>
+		<div id="weather-widget" class= "hidden" style="background-color:rgba(0, 0, 0, 0.6);">
+		  <h3 text-align="center" color="white">Weather <img id="weather-icon" src=""></img></h3>
+		  <p id="weather">
+		  </p>
 
-		  <img id="weather-icon" src=""></img>
 		</div>
 	</div>
 </body>
