--- a/app/assets/stylesheets/widgets.css
+++ b/app/assets/stylesheets/widgets.css
@@ -7,22 +7,31 @@
 	background-position:center center;
 }
 
-#weather{
-	color: red;
-}
 
 #weather-widget {
+	
+	color: white;
+	text-align: center;
 	border-radius: 25px;
 	padding: 20px;
 	display: none;
 	vertical-align: middle;
 	background: darkgray;
-	width: 60vw;
-	height: 40vw;
+	width: 25vw;
+	height: 25vw;
 	margin: 0 auto;
-	left: 0%;
+	right: 30%;
 	position:relative;
-	top: 125px;
+	top: 250px;
+}
+
+
+#weather{
+	text-align: center;
+	color: white;
+	font-family: "Roboto", monospace;
+	font-weight: 300;
+	font-size: 30px;
 }
 
 /*.weather-widget {
