adds space for user zipcode in weather app

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,7 @@
 								 <p>
 									 Blah blah weather blahhhhhhhhh
 								 </p>
+                 <input type="text" placeholder="zip code" name="user[zip]">
 
 							 </div>
 							 <div class="card-action">
