--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,13 @@
   </head>
 
   <body>
-    <%= flash.notice %> 
-    <% if user_signed_in? %>
-      <%= link_to('Logout', destroy_user_session_path, :method => :delete ) %>
-    <% else %>
-      <%= link_to "Sign In with Google", user_omniauth_authorize_path(:google_oauth2)%>
+    <% if @skip_layout != true %>
+      <%= flash.notice %> 
+      <% if user_signed_in? %>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete ) %>
+      <% else %>
+        <%= link_to "Sign In with Google", user_omniauth_authorize_path(:google_oauth2)%>
+      <% end %>
     <% end %>
     <%= yield %>
   </body>
