--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,10 +1,13 @@
 <head>
   <link rel="stylesheet" type="text/css" href="widgets.css">
 </head>
+<script>
+	var zip = "<%= @zip %>"
+</script>
 <body id="stuff">
 	<div id="widget-container">
 		<div id="weather-widget" class= "hidden" style="background-color:rgba(0, 0, 0, 0.6);">
-		  <h3 text-align="center" color="white">Weather <img id="weather-icon" src=""></img></h3>
+		  <h3 text-align="center" color="white">Weather <img id="weather-icon" src="" height="60" width="60"></img></h3>
 		  <p id="weather">
 		  </p>
 
