Adds javascript variables from instance ruby variables

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -3,6 +3,7 @@
 </head>
 <script>
 	var zip = "<%= @zip %>"
+  var weather = "<%= @weather %>"
 </script>
 <body id="stuff">
 	<div id="widget-container">
