--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,22 +31,42 @@
 					 <div class="col s12 m6">
 						 <div class="card blue-grey darken-1">
 							 <div class="card-content white-text">
-								 <span class="card-title">Weather</span>
+								 <span class="card-title">Maps</span>
 								 <p>
-									 Blah blah weather blahhhhhhhhh
-								 </p>
-                 <input type="text" placeholder="zip code" name="user[zip]">
+									 Blah blah directions blahhhhhhhhh
+								 </p><br>
+                 <input type="text" placeholder="your address" name="user[origin_location]">
+                 <input type="text" placeholder="your destination" name="user[destination_location]">
+                 <br>
 
-							 </div>
+                 <label>Select your mode of transportation</label>
+                  <select>
+                    <option value="" disabled selected>Choose your option</option>
+                    <option name="user[mode]" value="car">car</option>
+                    <option name="user[mode]" value="public transit">public transit</option>
+                    <option name="user[mode]" value="bicycle">bicycle</option>
+                  </select>
+                 <br>
+                 <label>If public transit, choose your preferred type</label>
+                  <select>
+                    <option name="user[transit_mode]" value="" disabled selected>Choose your option</option>
+                    <option name="user[transit_mode]" value="bus">bus</option>
+                    <option name="user[transit_mode]" value="muni">muni</option>
+                    <option name="user[transit_mode]" value="bart">bart</option>
+                  </select>
+                 </div>
+             
+
+
 							 <div class="card-action">
-								 <% if @user.weather %>
-									 <div class="switch" unchecked><label>Off<input name="user[weather]" id="switch-is-on" type="checkbox" checked><span class="lever"></span>On</label></div>
+								 <% if @user.maps %>
+									 <div class="switch" unchecked><label>Off<input name="user[maps]" id="switch-is-on" type="checkbox" checked><span class="lever"></span>On</label></div>
 									 <br>
 								 <% else %>
 									 <div class="switch">
 										 <label>
 											 Off
-											 <input type="checkbox" id="mycheckbox" name="user[weather]">
+											 <input type="checkbox" id="mycheckbox" name="user[maps]">
 											 <span class="lever"></span>
 											 On
 										 </label>
@@ -55,8 +75,39 @@
 							 </div>
 						 </div>
 					 </div>
-				 </div>
 
+           <div class="row">
+           <div class="col s12 m6">
+             <div class="card blue-grey darken-1">
+               <div class="card-content white-text">
+                 <span class="card-title">Weather</span>
+                 <p>
+                   Blah blah weather blahhhhhhhhh
+                 </p><br>
+                 <input type="text" placeholder="zip code" name="user[zip]">
+
+               </div>
+               <div class="card-action">
+                 <% if @user.weather %>
+                   <div class="switch" unchecked><label>Off<input name="user[weather]" id="switch-is-on" type="checkbox" checked><span class="lever"></span>On</label></div>
+                   <br>
+                 <% else %>
+                   <div class="switch">
+                     <label>
+                       Off
+                       <input type="checkbox" id="mycheckbox" name="user[weather]">
+                       <span class="lever"></span>
+                       On
+                     </label>
+                   </div>
+                <% end %>
+               </div>
+             </div>
+           </div>
+
+
+				 </div>
+         
 				 <input class="waves-effect waves-light btn-large" type="submit" onclick="value_()">
 
        </form>
