--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 	NOT logged in
 <%end %>
 
-<%= link_to "Turn on TV", user_widgets_path(@user.id), class: "waves-effect waves-light btn"%>
+<%= link_to "Turn off TV", user_widgets_path(@user.id), class: "waves-effect waves-light btn"%>
 
    <div class="container">
      <div class="row">
