user method construct_widgets can change the html content to be shown on the widget show page

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -3,6 +3,6 @@
 </head>
 <body id="stuff">
 	<div class="widget-container">
-    <%= WeatherWidget.get_weather('84103') %>
+    <%= @content %>
 	</div>
 </body>
