--- a/app/assets/stylesheets/widgets.css
+++ b/app/assets/stylesheets/widgets.css
@@ -22,18 +22,47 @@
 	margin: 0 auto;
 	right: 30%;
 	position:relative;
-	top: 250px;
+	top: 275px;
 }
 
+#maps-widget {
+	
+	color: white;
+	text-align: center;
+	border-radius: 25px;
+	padding: 20px;
+	display: none;
+	vertical-align: middle;
+	background: darkgray;
+	width: 25vw;
+	height: 25vw;
+	margin: 0 auto;
+	right: 37%;
+	position:absolute;
+	top: 275px;
+}
 
 #weather{
 	text-align: center;
 	color: white;
 	font-family: "Roboto", monospace;
 	font-weight: 300;
-	font-size: 30px;
+	font-size: 20px;
 }
 
-/*.weather-widget {
-	background: black;
-}*/
+#maps{
+	top: 10px;
+	text-align: center;
+	color: white;
+	font-family: "Roboto", monospace;
+	font-weight: 300;
+	font-size: 20px;
+}
+
+.widget-bold{
+	text-align: center;
+	color: white;
+	font-family: "Roboto", monospace;
+	font-weight: 300;
+	font-size: 28px;
+}
