beginning of news widget

--- a/app/assets/stylesheets/widgets.css
+++ b/app/assets/stylesheets/widgets.css
@@ -66,3 +66,22 @@
 	font-weight: 300;
 	font-size: 28px;
 }
+
+.news-container{
+	color: white; 
+	position: fixed; 
+	bottom: 0; 
+	font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
