--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -5,4 +5,8 @@
 	<div class="widget-container">
     <%= @content %>
 	</div>
+
+  <div class="news-container" ">
+    <marquee behavior="scroll" direction="left" ><%=  @news  %></marquee>
+  </div>
 </body>
