tries to add audio upon opening

--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -5,9 +5,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="widgets.css">
 
-
 <!-- Header -->
-<header class="w3-container w3-padding">
+<header class="w3-container w3-padding blah">
   <div class="w3-center">
   <h4>"INSPIRATIONAL QUOTE OF THE DAY..."</h4>
   <h1 class="w3-xxxlarge w3-animate-bottom">GOOD MORNING, BEAUTIFUL.</h1>
