--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 <%end %>
 
 <%= link_to "Turn off TV", user_widgets_path(@user.id), class: "waves-effect waves-light btn"%>
+<%= link_to "Register new device", new_devices_path, class: "waves-effect waves-light btn"%>
 
    <div class="container">
      <div class="row">
