--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -11,10 +11,8 @@
   <h4>"INSPIRATIONAL QUOTE OF THE DAY..."</h4>
   <h1 class="w3-xxxlarge w3-animate-bottom">GOOD MORNING, BEAUTIFUL.</h1>
   </div>
+  <iframe src="https://embed.spotify.com/?uri=spotify:track:2TpxZ7JUBn3uw46aR7qd6V" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 </header>
-
-<%= audio_tag "GetLow.m4a", class: "audio-play" %>
-<p class="btn btn-primary audioButton">Play</p>
 
 <body onload="startTime()" class="w3-light-grey">
 
@@ -47,23 +45,6 @@
   </div>
 </footer>
 
-<script>
-  $(".audioButton").on("click", function() {
-    $(".audio-play")[0].currentTime = 0;
-    return $(".audio-play")[0].play();
-  });
-
-   // var source = "../GetLow.mp3"
-   // var audio = document.createElement("audio");
-   // //
-   // audio.autoplay = true;
-   // //
-   // audio.load()
-   // audio.addEventListener("load", function() { 
-   //     audio.play(); 
-   // }, true);
-   // audio.src = source;
-</script>
 
 
 
