--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -108,6 +108,37 @@ NOT logged in
    </div>
  </div>
 
+
+ <div class="row">
+ <div class="col s12 m6">
+   <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+       <span class="card-title">News</span>
+       <p>
+         Blah blah current news blahhhhhhhhh
+       </p><br>
+     </div>
+     <div class="card-action">
+       <% if @user.news %>
+       <div class="switch" unchecked><label>Off<input name="user[news]" id="switch-is-on-2" type="checkbox" checked><span class="lever"></span>On</label>
+       </div>
+       <br>
+       <% else %>
+       <div class="switch">
+         <label>
+           Off
+           <input type="checkbox" id="mycheckbox" name="user[news]">
+           <span class="lever"></span>
+           On
+         </label>
+       </div>
+       <% end %>
+     </div>
+   </div>
+ </div>
+
+
+
 </div>
 
 <input class="waves-effect waves-light btn-large" type="submit" onclick="value_()">
