Able to get events from current user's calendar

--- a/app/views/users/calendars.html.erb
+++ b/app/views/users/calendars.html.erb
@@ -1,5 +1,13 @@
 <ul>
+<% @calendar["items"].each do |event| %>
+<li><%= event["summary"] %></li>
+<%if !(event["start"]["dateTime"] == nil)%>
+Start: <li><%= Time.parse(event["start"]["dateTime"]).to_s.split(" ")[1] %></li>
+End: <li><%= Time.parse(event["end"]["dateTime"]).to_s.split(" ")[1] %></li>
+<%end%>
 
-<li><%= @calendar %></li>
-
+<br>
+<br>
+<br>
+<%end%>
 </ul>
