adds photos and changes layout

--- a/app/assets/stylesheets/widgets.css
+++ b/app/assets/stylesheets/widgets.css
@@ -1,6 +1,6 @@
 #stuff {
 	/*background: image-url('/app/assets/images/morning.jpeg') no-repeat;*/
-	background-image: url('/assets/morning.jpg');
+	background-image: url('/assets/blurrysunset.jpg');
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-attachment: fixed;
