--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,22 @@
+  <nav>
+    <div class="nav-wrapper black">
+      <a href="/users/<%=current_user.id%>" class="brand-logo"><img class="responsive-img" id="logo" src="awaken.jpg"/>AWAKEN</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">About</a></li>
+        <% if @skip_layout != true %>
+          <% if user_signed_in? %>
+            <li><%= link_to('Logout', destroy_user_session_path, :method => :delete ) %></li>
+          <% end %>
+        <% end %>
+        <li><%= link_to "Register new device", new_devices_path, class: "waves-effect waves-light btn"%><li>
+      </ul>
+    </div>
+  </nav>
 
-
-<% if @user %>
-Its Logged in <%= @user.username %>
-<%else %>
-NOT logged in
-<%end %>
-
-<%= link_to "Register new device", new_devices_path, class: "waves-effect waves-light btn"%>
 
 <div class="container">
  <div class="row">
-   <h2 class="col s12">Set Your Alarm</h2>
+   <h3 class="col s12">Preferences</h3>
    <form class="col s12" action="/users/<%=current_user.id%>" method="POST">
      <input type="hidden" name="_method" value="PUT">
      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
@@ -32,7 +38,7 @@ NOT logged in
 
      <div class="row">
       <div class="col s12 m6">
-       <div class="card blue-grey darken-1">
+       <div class="card grey darken-1">
         <div class="card-content white-text">
          <span class="card-title">Maps</span>
          <p>
@@ -80,7 +86,7 @@ NOT logged in
 
 <div class="row">
  <div class="col s12 m6">
-   <div class="card blue-grey darken-1">
+   <div class="card grey darken-1">
      <div class="card-content white-text">
        <span class="card-title">Weather</span>
        <p>
@@ -111,7 +117,7 @@ NOT logged in
 
  <div class="row">
  <div class="col s12 m6">
-   <div class="card blue-grey darken-1">
+   <div class="card grey darken-1">
      <div class="card-content white-text">
        <span class="card-title">News</span>
        <p>
