--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -1,21 +1,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="widgets.css">
+
 
 <!-- Header -->
 <header class="w3-container w3-padding blah">
   <div class="w3-center">
-  <h5>"<%= @quotes_list.sample.upcase %>"</h5>
+  <h5 style="color:grey;">"<%= @quotes_list.sample.upcase %>"</h5>
   <h1 class="w3-xxxlarge w3-animate-bottom">GOOD MORNING, BEAUTIFUL.</h1>
   </div>
 <!--   <iframe src="https://embed.spotify.com/?uri=spotify:track:7jslhIiELQkgW9IHeYNOWE" width="300" height="380" frameborder="0" allowtransparency="true"></iframe> -->
 </header>
 
 
-<body onload="startTime()" class="w3-light-grey">
+<body onload="startTime()" class="w3-light-grey" >
 
   <div class="w3-row-padding w3-center w3-margin-top">
   
@@ -34,7 +35,7 @@
   </div>
 </body>
 
-<footer class="w3-container w3-dark-grey w3-theme-dark w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16">
   <div class="w3-center w3-container w3-padding">
     <h1 class="w3-xxxlarge">
       <clock>
