--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -138,6 +138,35 @@ NOT logged in
  </div>
 
 
+ <div class="row">
+ <div class="col s12 m6">
+   <div class="card blue-grey darken-1">
+     <div class="card-content white-text">
+        <span class="card-title">Agenda</span>
+           <p>
+             Blah blah agenda blahhhhhhhhh
+           </p><br>
+         </div>
+         <div class="card-action">
+           <% if @user.calendar %>
+           <div class="switch" unchecked><label>Off<input name="user[calendar]" id="switch-is-on-3" type="checkbox" checked><span class="lever"></span>On</label>
+           </div>
+           <br>
+           <% else %>
+           <div class="switch">
+            <label>
+              Off
+              <input type="checkbox" id="mycheckbox" name="user[calendar]">
+              <span class="lever"></span>
+              On
+            </label>
+          </div>
+        <% end %>
+     </div>
+   </div>
+ </div>
+
+
 
 </div>
 
