--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <!-- Header -->
-<%= audio_tag("AwakenJingle_demo.mp3", autoplay: true) %>
+<%= audio_tag("AwakenJingle.mp3", autoplay: true) %>
 <header class="w3-container w3-padding blah">
   <div class="w3-center">
   <h5>"<%= @quotes_list.sample.upcase %>"</h5>
