--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -1,11 +1,26 @@
-#stuff {
-	/*background: image-url('/app/assets/images/morning.jpeg') no-repeat;*/
-	background-image: url('/assets/morning.jpg');
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-attachment: fixed;
-	background-position:center center;
+#content:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  
+  display: block;
+  background-image: url('/assets/city1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center center;
+
+	-webkit-filter: blur(3px);
+	  -moz-filter: blur(3px);
+	  -o-filter: blur(3px);
+	  -ms-filter: blur(3px);
+	  filter: blur(3px);
 }
+
 
 
 #weather-widget {
@@ -47,7 +62,7 @@
 	color: white;
 	font-family: "Roboto", monospace;
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 25px;
 }
 
 #maps{
@@ -56,7 +71,7 @@
 	color: white;
 	font-family: "Roboto", monospace;
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 25px;
 }
 
 .widget-bold{
@@ -64,13 +79,13 @@
 	color: white;
 	font-family: "Roboto", monospace;
 	font-weight: 300;
-	font-size: 28px;
+	font-size: 25px;
 }
 
 #news-widget{
 	color: white; 
 	position: fixed;
-	bottom: 0; 
+	bottom: 17%; 
 	right: 0;
 	font-size: 30px;
 	width: 100%;
@@ -95,8 +110,24 @@ clock{
   
 }
 
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
 
+.all-widgets {
+	margin-top: 6%;
+}
 
+.title {
+	font-size: 60px;
+	font-weight: bold;
+}
 
 
 
