--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -12,7 +12,7 @@
 
 #headerone {
   position: relative;
-  background-image: url("/assets/sunrise2.jpg");
+  background-image: image-url("sunrise2.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -56,5 +56,3 @@
 .homepage.is-loading #headerone:after {
   opacity: 1;
 }
-
-
