changes to double quotes on background image

--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -6,7 +6,7 @@
   z-index: -1;
 
   display: block;
-  background-image: image-url('city1.jpg');
+  background-image: image-url("city1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
