adds style to tv-notices

--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -128,3 +128,17 @@ footer {
 	font-size: 60px;
 	font-weight: bold;
 }
+
+
+.tv-style{
+  color: white;
+  text-align: center;
+  padding: 20px;
+  vertical-align: middle;
+  background: darkgray;
+  width: 25vw;
+  height: 20vw;
+  margin: 0 auto;
+  width: 80%;
+}
+
