--- a/app/views/devices/info.html.erb
+++ b/app/views/devices/info.html.erb
@@ -1,4 +1,6 @@
-<h3>It looks like your device isn't registered yet!</h3>
-<h5>Please go to your user account and enter the following registration code under device registration:</h5>
-<h3><%= @serial %></h3>
-<h5>Once successfully registered, please restart your device</h5>
+<div class="tv-style">
+  <h3>It looks like your device isn't registered yet!</h3>
+  <h5>Please go to your user account and enter the following registration code under device registration:</h5>
+  <h3><%= @serial %></h3>
+  <h5>Once successfully registered, please restart your device</h5>
+</div>
