--- a/app/views/devices/success.html.erb
+++ b/app/views/devices/success.html.erb
@@ -1,2 +1,4 @@
-<h3>Your device has been successfully registered, and will react to any alarms programmed through your account!</h3>
+<div class="tv-style">
+  <h3>Your device has been successfully registered, and will react to any alarms programmed through your account!</h3>
   <h5>You can safely turn off your screen now.</h5>
+</div>
