--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -2,6 +2,6 @@
 <h3>Please enter your device's registration code below:</h3>
 <%= form_for @device, url: {action: "create"} do |f| %>
   <%= f.text_field :serial %>
-  <%= f.submit "Register!" %>
+  <%= f.submit "Register!", :id => "reg-button" %>
 <% end %>
 </div>
