--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -6,7 +6,7 @@
   z-index: -1;
 
   display: block;
-  background-image: image-url("city1.jpg");
+  // background-image: image-url("city1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -83,7 +83,7 @@
 }
 
 #news-widget{
-	color: white; 
+	color: white;
 	position: fixed;
 	bottom: 17%;
 	right: 0;
@@ -141,6 +141,3 @@ footer {
   margin: 0 auto;
   width: 80%;
 }
-
-
-
