styles the entire site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,10 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <% if @skip_layout != true %>
-  <%= flash.notice %> 
-  <% if user_signed_in? %>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete ) %>
-  <% end %>
-  <% end %>
   
   <%= yield %>
   
