--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -12,7 +12,7 @@
 
 #headerone {
   position: relative;
-  background-image: url("/assets/sunrise2.jpg");
+  background-image: url("/assets/DV_Layers-X2.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -57,4 +57,7 @@
   opacity: 1;
 }
 
-
+.logo {
+  width: 25%;
+  height: 25%;
+}
