adds dark grey element to cards and shadow effect

--- a/app/views/devices/info.html.erb
+++ b/app/views/devices/info.html.erb
@@ -1,4 +1,4 @@
-<div class="tv-style">
+<div class="z-depth-4 tv-style grey darken-1">
   <h3>It looks like your device isn't registered yet!</h3>
   <h5>Please go to your user account and enter the following registration code under device registration:</h5>
   <h3><%= @serial %></h3>
