--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,4 +1,4 @@
-<div class="tv-style">
+<div class="z-depth-4 tv-style grey darken-1">
 <h3>Please enter your device's registration code below:</h3>
 <%= form_for @device, url: {action: "create"} do |f| %>
   <%= f.text_field :serial %>
