--- a/app/views/devices/success.html.erb
+++ b/app/views/devices/success.html.erb
@@ -1,4 +1,4 @@
-<div class="tv-style">
+<div class="z-depth-4 tv-style grey darken-1">
   <h3>Your device has been successfully registered, and will react to any alarms programmed through your account!</h3>
   <h5>You can safely turn off your screen now.</h5>
 </div>
