makes adjustment to how background image is called

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -12,7 +12,7 @@
 
 #headerone {
   position: relative;
-  background-image: url("/assets/DV_Layers-X2.jpg");
+  background-image: image-url("DV_Layers-X2.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -61,4 +61,3 @@
   width: 25%;
   height: 25%;
 }
-
